...
    self.agreementTextViewHeight.constant = self.agreementTextView.contentSize.height + [self.environment.styles standardHorizontalMargin];
}

    //setting accessibility identifiers for developer automation use
- (void)setAccessibilityIdentifiers {
    self.img_Logo.accessibilityIdentifier = @"LoginViewController:logo-image-view";
    self.tf_EmailID.accessibilityIdentifier = @"LoginViewController:email-text-field";
    self.tf_Password.accessibilityIdentifier = @"LoginViewController:password-text-field";
    self.agreementTextView.accessibilityIdentifier = @"LoginViewController:agreement-text-view";
    self.externalAuthContainer.accessibilityIdentifier = @"LoginViewController:external-auth-container-view";
    self.seperatorLeft.accessibilityIdentifier = @"LoginViewController:left-seperator-image-view";
    self.seperatorRight.accessibilityIdentifier = @"LoginViewController:right-seperator-image-view";
    self.btn_TroubleLogging.accessibilityIdentifier = @"LoginViewController:trouble-logging-button";
    self.btn_Login.accessibilityIdentifier = @"LoginViewController:login-button";
    self.scroll_Main.accessibilityIdentifier = @"LoginViewController:main-scroll-view";
    self.img_Map.accessibilityIdentifier = @"LoginViewController:map-image-view";
    self.activityIndicator.accessibilityIdentifier = @"LoginViewController:activity-indicator";
    self.versionLabel.accessibilityIdentifier = @"LoginViewController:version-label";
    self.lbl_OrSignIn.accessibilityIdentifier = @"LoginViewController:sign-in-label";
}
...
