...
"ACCESSIBILITY_SELECT_VALUE_HINT" = "Double tap to select.";
/* Accessibility label for Unknown Icon in the Courseware screens */
"ACCESSIBILITY_UNKNOWN" = "Unknown";
/* Accessibility label for Video Icon in the Courseware screens */
"ACCESSIBILITY_VIDEO" = "Video";
/* Text spoken for Navigation Button on Course List Screen */
"ACCESSIBILITY_MENU" = "Navigation Menu";
/* Accessibility label for close button when left drawer is open*/
"ACCESSIBILITY_CLOSE_MENU" = "Close Navigation Menu";
/* Accessibility label for hiding keyboard*/
"ACCESSIBILITY_HIDE_KEYBOARD" = "Hide Keyboard";
/* Accessibility Hint to view user profile*/
"ACCESSIBILITY_SHOW_USER_PROFILE_HINT" = "Double tap to view user profile";
...
"ENDORSED" = "Endorsed";
/* Facebook login method */
"FACEBOOK"="Facebook";
/* Overlay message shown when facebook login fails because the user's account isn't linked */
"FAILED_TO_LOAD_TOPICS"="Failed to load topics.";
/* Title of find courses screen */
"FIND_COURSES"="Find Courses";
/* No available courses on find courses section */
"FIND_COURSES_NO_AVAILABLE_COURSES"="No available courses";
/* Overlay message shown when enrolling in a course fails because the user is already in the course */
"FIND_COURSES_ALREADY_ENROLLED_MESSAGE"="You are already enrolled in this course";
/* Overlay message shown when enrolling in a course fails */
"FIND_COURSES_ENROLLMENT_ERROR_DESCRIPTION"="An error occurred while creating the new course enrollment";
...
"LARGE_DOWNLOAD_TITLE"="Large Download";
/* Title for Course Item that was last accessed */
"LAST_ACCESSED" = "Last Accessed";
/* Prompt leading user to create account screen */
"LOGIN_SPLASH_SIGN_UP"="Sign up and start learning";
/* Prompt leading user to sign in screen */
"LOGIN_SPLASH_SIGN_IN"="Already have an account? Sign in";
/* Button title to log out the current user */
"LOGOUT"="Logout";
/* Option to sort discussion post list by most activity */
"MOST_ACTIVITY"="Most Activity";
/* Option to sort discussion post list by most votes */
"MOST_VOTES"="Most Votes";
/* Screen title showing a user's courses */
"COURSES"="Courses";
/* Screen title showing a user's settings */
"MY_SETTINGS"="My Settings";
/* Marked as answer for endorsed responses */
"MARKED_ANSWER" = "Marked as answer";
/* Overlay error shown when attempting an action without an internet connection */
"NETWORK_NOT_AVAILABLE_MESSAGE"="You are not connected to the Internet.";
...
"OK"="OK";
/* Button title allowing user to open current page in their web browser */
"OPEN_IN_BROWSER"="View in Safari";
/* Button label to bring up course finder */
"OR_SIGN_IN_WITH"="Or Sign in with";
/* Login screen password field title text */
"PASSWORD_TITLE_TEXT" = "Password";
/* Alert dialog button shown when finishing a video to ask if user should continue by watching the next video */
"PLAYBACK_COMPLETE_CONTINUE"="Continue";
/* Alert dialog button shown when finishing a video to ask if user should continue by watching the next video (negative option) */
"PLAYBACK_COMPLETE_CONTINUE_CANCEL"="No";
/* Alert dialog content when finishing a video to ask if user should continue by watching the next video */
"PLAYBACK_COMPLETE_MESSAGE"="Would you like to watch the next video?";
...
"SECTION_UNAVAILABLE_OFFLINE"="This section is not available in offline mode.\nIf you've downloaded content for a different section, go to that section to view the content.";
/* Screen title showing a user's settings */
"SETTINGS"="Settings";
/* Text for a Twitter or Facebook post to a course about page */
"SHARE_A_COURSE"="I'm taking a course on {platform_name}! Check it out:";
/* Sign in screen title and button initiating login process after user enters credentials like username and password */
"SIGN_IN_TEXT"="Sign In";
/* Message shown while user waits for response to a sign in request */
"SIGN_IN_BUTTON_TEXT_ON_SIGN_IN"="Signing In";
/*  Accessibility text prefix for  Facebook and Google Buttons*/
"SIGN_IN_PROMPT"="Sign in with";
/*Sign up screen title and button initiating sign up process on the main screen */
"REGISTER_TEXT"="Register";
...
