...
    [super viewDidLoad];
    
    [self.signInButton setTitle:[Strings loginSplashSignIn] forState:UIControlStateNormal];
    [self.signUpButton applyButtonStyleWithStyle:[self.environment.styles filledPrimaryButtonStyle] withTitle:[Strings loginSplashSignUp]];
    [self.signInButton.titleLabel setFont:[self.environment.styles boldSansSerifOfSize:14.0f]];
    [self.signInButton setAccessibilityIdentifier:@"LoginSpashViewController:sign-in-button"];
    [self.signInButton setAccessibilityIdentifier:@"LoginSpashViewController:sign-up-button"];
    if (self.environment.config.invertColorLoginSlpashViewSignInBtn) {
        [self.signInButton setTitleColor:[self.environment.styles neutralBlack] forState:UIControlStateNormal];
        [self.signInButton setTitleColor:[self.environment.styles neutralBlack] forState:UIControlStateSelected];
    }
    
    if (!self.environment.config.useLogoSub) {
...
